examples/negative/silent_contract/duplicate_fn_decl.kai
# Silent contract (#520 audit, category 5 / modules): two `fn`
# declarations with the same name `foo` appear in the same
# module. Per #518's duplicate-decl discipline, the resolver
# should reject with "already declared", matching the `type`
# case (covered by `modules/duplicate_type_decl.kai`). kaikai
# accepts both, the second silently shadows the first.
#
# See examples/negative/silent_contract/README.md for follow-up.

fn foo() : Int = 1
fn foo() : Int = 2

fn main() : Int = foo()
